# Daisy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_android.sh  build_ios.sh
cmake/: gtest_utils.cmake  toolchain.xcode.cmake
examples/JerryWatch/: HAL.LICENSE.txt  TitaniumKit.LICENSE.txt
examples/JerryWatch/JerryWatch/: Info.plist
examples/JerryWatch/JerryWatch WatchKit App/: Info.plist
examples/JerryWatch/JerryWatch WatchKit App/Base.lproj/: Interface.storyboard
examples/JerryWatch/JerryWatch WatchKit Extension/: Info.plist  InterfaceController.mm
examples/JerryWatch/JerryWatch WatchKit Extension/Titanium/: API.cpp  API.hpp  Module.cpp  Module.hpp
examples/JerryWatch/JerryWatch WatchKit Extension/TitaniumWatchKit/: API.h  API.mm
examples/JerryWatch/JerryWatch.xcodeproj/: project.pbxproj
examples/JerryWatch/JerryWatch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/JerryWatch/JerryWatch/Base.lproj/: LaunchScreen.xib
examples/JerryWatch/JerryWatchTests/: Info.plist  JerryWatchTests.m
examples/JerryWatch/includes/: daisy_export.h
examples/JerryWatch/includes/Daisy/: JSContext.hpp  JSContextGroup.hpp  JSExport.hpp  JSNumber.hpp  JSString.hpp
examples/JerryWatch/includes/Daisy/detail/: JSBase.hpp  JSUtil.hpp
include/Daisy/: JSBoolean.hpp  JSClass.hpp  JSContext.hpp  JSContextGroup.hpp  JSExport.hpp  JSExportClass.hpp  JSObject.hpp  JSString.hpp  JSValue.hpp  daisy.hpp
include/Daisy/detail/: JSUtil.hpp
jerry-core/: config.h  jerry.cpp
jerry-core/ecma/builtin-objects/: ecma-builtin-date-prototype.cpp  ecma-builtin-helpers-date.cpp  ecma-builtin-math.cpp  ecma-builtin-number-prototype.cpp
src/: JSBoolean.cpp  JSClass.cpp  JSContext.cpp  JSContextGroup.cpp  JSNumber.cpp  JSObject.cpp  JSString.cpp  JSValue.cpp
src/detail/: JSUtil.cpp
tests/: CMakeLists.txt  DaisyContextTests.cpp  DaisyExportTests.cpp  JerryCoreTests.cpp
